update documentatio + style

--- a/src/public/styles/style.less
+++ b/src/public/styles/style.less
@@ -71,7 +71,7 @@
         border: none;
         border-radius: 5px;
         outline: none;
-        background: @neonDark;
+        background: @neonLight;
         padding: 10px;
         font-family: 'Cutive Mono', monospace;
         font-size: 1.1em;
