update command style

--- a/src/public/styles/style.less
+++ b/src/public/styles/style.less
@@ -34,6 +34,12 @@
         font-family: 'Cutive Mono', monospace;
     }
 
+    &-line {
+        &-input {
+            font-weight: bold;
+        }
+    }
+
     &-label {
         font-weight: bold;
         background-color: #14191f;
